Fix pre tag overflow

--- a/static/style.css
+++ b/static/style.css
@@ -27,6 +27,10 @@
 	margin: 0px;
 }
 
+.status-content pre {
+	overflow-x: auto;
+}
+
 .status-content img,
 .status-image,
 .status-video {
@@ -52,6 +56,8 @@
 }
 
 .status {
+	overflow-x: auto;
+	width: 100%;
 }
 
 .status-dname {
